# release-test-rs

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
