[package]
description = "description of release-test"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "release-test"
publish = false
repository = "https://github.com/mlehmannm/release-test-rs.git"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "release-test"
path = "src/main.rs"

[dependencies]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'    # optimize for size
strip = true

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
